# kafka-python

./: README.md  pyproject.toml
src/: consume.py  producer.py
