[tool.poetry]
name = "kafka-python-env"
version = "0.1.0"
description = ""
authors = ["tonmoy"]

[tool.poetry.dependencies]
python = "^3.8"
kafka-python = "^2.0.2"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
